--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 git+https://github.com/openai/gym.git
 h5py==2.6.0
 joblib==0.10.2
+Keras==1.1.0
+matplotlib==1.5.2
 numpy==1.11.1
 pandas==0.18.1
 Pillow==3.3.1
