--- a/circle.yml
+++ b/circle.yml
@@ -12,14 +12,14 @@ dependencies:
     - pip install -U h5py
     - pip install -U numpy
     - pip install -U scipy
-    - pip install -U pandas
-    - pip install -U matplotlib
-    - pip install -U pytest-cov
-    - export TF_BINARY_URL=export TF_BINARY_URL=https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.11.0rc1-cp35-cp35m-linux_x86_64.whl
-    - pip install $TF_BINARY_URL
-    - pip install git+https://github.com/tflearn/tflearn.git
-    - pip install keras
-    - pip install git+https://github.com/openai/gym.git
+    # - pip install -U pandas
+    # - pip install -U matplotlib
+    # - pip install -U pytest-cov
+    # - export TF_BINARY_URL=export TF_BINARY_URL=https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.11.0rc1-cp35-cp35m-linux_x86_64.whl
+    # - pip install $TF_BINARY_URL
+    # - pip install git+https://github.com/tflearn/tflearn.git
+    # - pip install keras
+    # - pip install git+https://github.com/openai/gym.git
 
 test:
   override:
