--- a/circle.yml
+++ b/circle.yml
@@ -8,12 +8,12 @@ dependencies:
   pre:
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get update
     - sudo apt-get install -y gcc-4.9 g++-4.9 libhdf5-dev
-  override:
     - pip install -U h5py
     - pip install -U numpy
-    - pip install -U scipy
+    # - pip install -U scipy
     # - pip install -U pandas
     # - pip install -U matplotlib
+  override:
     # - pip install -U pytest-cov
     # - export TF_BINARY_URL=export TF_BINARY_URL=https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.11.0rc1-cp35-cp35m-linux_x86_64.whl
     # - pip install $TF_BINARY_URL
