--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,7 @@ dependencies:
     # - pip install -U pandas
     # - pip install -U matplotlib
   override:
+    - echo "skip"
     # - pip install -U pytest-cov
     # - export TF_BINARY_URL=export TF_BINARY_URL=https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.11.0rc1-cp35-cp35m-linux_x86_64.whl
     # - pip install $TF_BINARY_URL
