--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,7 @@ dependencies:
     - sudo apt-get install -y gcc-4.9 g++-4.9 libhdf5-dev
     - pip install -U h5py
     - pip install -U numpy
-    # - pip install -U scipy
+    - pip install -U scipy
     # - pip install -U pandas
     # - pip install -U matplotlib
   override:
