--- a/circle.yml
+++ b/circle.yml
@@ -13,12 +13,12 @@ dependencies:
     - pip install -U scipy
     - pip install -U matplotlib
   override:
-    - pip install -U pytest-cov
     - export TF_BINARY_URL=https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.11.0rc1-cp35-cp35m-linux_x86_64.whl
     - pip install $TF_BINARY_URL
-    - pip install git+https://github.com/tflearn/tflearn.git
-    - pip install keras
-    - pip install git+https://github.com/openai/gym.git
+    - pip install -U git+https://github.com/tflearn/tflearn.git
+    - pip install -U keras
+    - pip install -U git+https://github.com/openai/gym.git
+    - pip install -U pytest-cov
 
 test:
   override:
