--- a/circle.yml
+++ b/circle.yml
@@ -19,6 +19,8 @@ dependencies:
     - pip install -U keras
     - pip install -U git+https://github.com/openai/gym.git
     - pip install -U pytest-cov
+  cache_directories:
+    - "~/.apt-cache"
 
 test:
   override:
