--- a/circle.yml
+++ b/circle.yml
@@ -18,8 +18,10 @@ dependencies:
     - pip install -U git+https://github.com/tflearn/tflearn.git
     - pip install -U keras
     - pip install -U git+https://github.com/openai/gym.git
+    - pip install -U codeclimate-test-reporter
     - pip install -U pytest-cov
 
 test:
   override:
     - python setup.py test
+    - codeclimate-test-reporter
