--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,7 +3,8 @@ engines:
     enabled: true
     config:
       languages:
-        - python
+        python:
+          mass_threshold: 40
   fixme:
     enabled: true
   radon:
