--- a/circle.yml
+++ b/circle.yml
@@ -15,11 +15,16 @@ dependencies:
   override:
     - export TF_BINARY_URL=https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.11.0rc1-cp35-cp35m-linux_x86_64.whl
     - pip install $TF_BINARY_URL
+    - python -c 'import os; import inspect; import tensorflow; print(os.path.dirname(inspect.getfile(tensorflow)))'
     - pip install -U git+https://github.com/tflearn/tflearn.git
     - pip install -U keras
     - pip install -U git+https://github.com/openai/gym.git
     - pip install -U codeclimate-test-reporter
     - pip install -U pytest-cov
+  cache_directories:
+    - "~/.apt-cache"
+  pre:
+    - sudo rm -rf /var/cache/apt/archives && sudo ln -s ~/.apt-cache /var/cache/apt/archives && mkdir -p ~/.apt-cache/partial
 
 test:
   override:
