--- a/circle.yml
+++ b/circle.yml
@@ -6,15 +6,18 @@ machine:
 
 dependencies:
   pre:
+    - sudo rm -rf /var/cache/apt/archives && sudo ln -s ~/.apt-cache /var/cache/apt/archives && mkdir -p ~/.apt-cache/partial
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get update
     - sudo apt-get install -y gcc-4.9 g++-4.9 libhdf5-dev
+    - pip install -U pip
     - pip install -U h5py
     - pip install -U numpy
     - pip install -U scipy
     - pip install -U matplotlib
   override:
     - export TF_BINARY_URL=https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.11.0rc1-cp35-cp35m-linux_x86_64.whl
-    - pip3 install --ignore-installed --upgrade $TF_BINARY_URL
+    - pip install --ignore-installed --upgrade $TF_BINARY_URL
+    - pip list
     - python -c 'import os; import inspect; import tensorflow; print(os.path.dirname(inspect.getfile(tensorflow)))'
     - pip install -U git+https://github.com/tflearn/tflearn.git
     - pip install -U keras
@@ -23,8 +26,6 @@ dependencies:
     - pip install -U pytest-cov
   cache_directories:
     - "~/.apt-cache"
-  pre:
-    - sudo rm -rf /var/cache/apt/archives && sudo ln -s ~/.apt-cache /var/cache/apt/archives && mkdir -p ~/.apt-cache/partial
 
 test:
   override:
