--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,7 @@ dependencies:
   pre:
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get update
     - sudo apt-get install -y gcc-4.9 g++-4.9 libhdf5-dev
+    - sudo apt-get install python3-tk
     - pip install -U pip
     - pip install h5py
     - pip install numpy
