--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ dependencies:
     - pip install h5py
     - pip install numpy
     - pip install scipy
-    - pip install matplotlib
+    - pip install -U --force-reinstall matplotlib
   override:
     - pip install $TF_BINARY_URL
     - pip install git+https://github.com/tflearn/tflearn.git
