--- a/circle.yml
+++ b/circle.yml
@@ -9,12 +9,11 @@ dependencies:
   pre:
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get update
     - sudo apt-get install -y gcc-4.9 g++-4.9 libhdf5-dev
-    - sudo apt-get install -y tk-dev
     - pip install -U pip
     - pip install h5py
     - pip install numpy
     - pip install scipy
-    - pip install -U --force-reinstall matplotlib
+    - pip install matplotlib
   override:
     - pip install $TF_BINARY_URL
     - pip install git+https://github.com/tflearn/tflearn.git
