--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "start": "python3 main.py",
+    "start": "python3 main.py | tee -a ./data/terminal.log",
     "test": "python3 setup.py test",
     "posttest": "rm -rf .cache __pycache__ */__pycache__ *egg-info htmlcov",
     "clear": "rm -rf .cache __pycache__ */__pycache__ *egg-info htmlcov .coverage data/*.png data/*.json"
