add pandas requirement to prepare for data analysis

--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,7 @@ dependencies:
     - pip install numpy
     - pip install scipy
     - pip install matplotlib
+    - pip install pandas
   override:
     - pip install $TF_BINARY_URL
     - pip install git+https://github.com/tflearn/tflearn.git
