add gulp for auto file copier to keybase

--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
   "bugs": {
     "url": "https://github.com/kengz/openai_gym/issues"
   },
-  "homepage": "https://github.com/kengz/openai_gym#readme"
+  "homepage": "https://github.com/kengz/openai_gym#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-changed": "^1.3.2",
+    "gulp-watch": "^4.3.11"
+  }
 }
