serialize data into folders by prefix_id

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "python3 main.py -b | tee -a ./data/terminal.log",
     "test": "python3 setup.py test",
     "posttest": "rm -rf .cache __pycache__ */__pycache__ *egg-info htmlcov",
-    "clear": "rm -rf .cache __pycache__ */__pycache__ *egg-info htmlcov .coverage data/*.png data/*.json data/*.log data/*.csv"
+    "clear": "rm -rf .cache __pycache__ */__pycache__ *egg-info htmlcov .coverage data/**/ data/*.log"
   },
   "repository": {
     "type": "git",
