add hyperopt, prepare for hyperparam opt

--- a/circle.yml
+++ b/circle.yml
@@ -15,6 +15,7 @@ dependencies:
     - pip install scipy
     - pip install matplotlib
     - pip install pandas
+    - pip install hyperopt
   override:
     - pip install $TF_BINARY_URL
     - pip install git+https://github.com/tflearn/tflearn.git
