--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ numpy==1.11.1
 scipy==0.18.0
 matplotlib==1.4.3
 pandas==0.18.1
+hyperopt==0.1
 https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-0.11.0rc1-py3-none-any.whl
 git+https://github.com/tflearn/tflearn.git
 Keras==1.1.0
