--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ pandas==0.18.1
 pytest-cov==2.4.0
 git+https://github.com/openai/gym.git
 https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-0.12.1-py3-none-any.whl
-git+https://github.com/Theano/Theano.git
+Theano==0.8.2
 Keras==1.1.0
