--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "start": "python3 main.py -bgp -s dqn -t 5 | tee -a ./data/terminal.log",
-    "dev": "python3 main.py -bgp -s dev_dqn -t 2 | tee -a ./data/terminal.log",
+    "start": "python3 main.py -bgp -e dqn -t 5 | tee -a ./data/terminal.log",
+    "dev": "python3 main.py -bgp -e dev_dqn -t 2 | tee -a ./data/terminal.log",
     "remote": "xvfb-run -a -s \"-screen 0 1400x900x24\" -- npm start",
     "queue": "xvfb-run -a -s \"-screen 0 1400x900x24\" -- python3 experiment_queue.py -bg | tee -a ./data/terminal.log",
     "test": "python3 setup.py test",
