--- a/package.json
+++ b/package.json
@@ -31,9 +31,14 @@
     "url": "https://github.com/kengz/openai_gym/issues"
   },
   "homepage": "https://github.com/kengz/openai_gym#readme",
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-changed": "^1.3.2",
-    "gulp-watch": "^4.3.11"
+  "dependencies": {
+    "config": "^1.25.1",
+    "grunt": "^1.0.1",
+    "grunt-concurrent": "^2.3.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-shell": "^2.1.0",
+    "grunt-sync": "^0.6.2",
+    "load-grunt-tasks": "^3.5.2",
+    "lodash": "^4.17.4"
   }
 }
