--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openai_gym",
+  "name": "openai_lab",
   "version": "1.0.0",
   "description": "working out at the OpenAI gym",
   "main": "index.js",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kengz/openai_gym.git"
+    "url": "git+https://github.com/kengz/openai_lab.git"
   },
   "keywords": [
     "openai",
@@ -27,9 +27,9 @@
   "author": "keng, laura",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kengz/openai_gym/issues"
+    "url": "https://github.com/kengz/openai_lab/issues"
   },
-  "homepage": "https://github.com/kengz/openai_gym#readme",
+  "homepage": "https://github.com/kengz/openai_lab#readme",
   "dependencies": {
     "config": "^1.25.1",
     "grunt": "^1.0.1",
