cleanup npm old useless commands

--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
   },
   "scripts": {
     "start": "grunt",
-    "remote": "xvfb-run -a -s \"-screen 0 1400x900x24\" -- grunt",
-    "dev": "python3 main.py -bgp -e dev_dqn -t 2 | tee -a ./data/terminal.log",
     "test": "python3 setup.py test",
-    "posttest": "rm -rf .cache __pycache__ */__pycache__ *egg-info htmlcov",
-    "clear": "rm -rf .cache __pycache__ */__pycache__ *egg-info htmlcov .coverage data/**/ data/*.log"
+    "posttest": "rm -rf .cache __pycache__ */__pycache__ *egg-info htmlcov"
   },
   "repository": {
     "type": "git",
