--- a/circle.yml
+++ b/circle.yml
@@ -1,27 +1,16 @@
 machine:
   python:
     version: 3.5.2
-  environment:
-    TF_BINARY_URL: https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.12.1-cp35-cp35m-linux_x86_64.whl
 
 dependencies:
   pre:
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get update
     - sudo apt-get install -y gcc-4.9 g++-4.9 libhdf5-dev libopenblas-dev git python3-dev
     - pip install -U pip
-    - pip install six
-    - pip install h5py
-    - pip install numpy
-    - pip install scipy
-    - pip install matplotlib
-    - pip install seaborn
-    - pip install pandas
-    - pip install hyperopt
-    - pip install pytest-cov
+    - pip install six h5py numpy scipy matplotlib seaborn pandas pytest-cov
   override:
     - pip install git+https://github.com/openai/gym.git
-    - git clone https://github.com/pybox2d/pybox2d && cd pybox2d/ && python setup.py clean && python setup.py build && python setup.py install
-    - pip install $TF_BINARY_URL
+    - pip install tensorflow
     - pip install git+https://github.com/Theano/Theano.git
     - pip install keras
 test:
