use pypi to install theano for ci, save time

--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ dependencies:
   override:
     - pip install git+https://github.com/openai/gym.git
     - pip install tensorflow
-    - pip install git+https://github.com/Theano/Theano.git
+    - pip install theano
     - pip install keras
 test:
   override:
