--- a/source/circle.yml
+++ b/source/circle.yml
@@ -7,7 +7,7 @@ dependencies:
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get update
     - sudo apt-get install -y gcc-4.9 g++-4.9 libhdf5-dev libopenblas-dev git python3-dev
     - pip install -U pip
-    - pip install six h5py numpy scipy matplotlib seaborn pandas pytest-cov atari_py Pillow PyOpenGL
+    - pip install six h5py numpy scipy matplotlib seaborn pandas atari_py Pillow PyOpenGL glances pytest-cov
   override:
     - pip install tensorflow
     - pip install theano
