--- a/circle.yml
+++ b/circle.yml
@@ -6,6 +6,7 @@ dependencies:
   pre:
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get update
     - sudo apt-get install -y gcc-4.9 g++-4.9 libhdf5-dev libopenblas-dev git python3-dev
+    - sudo apt-get install python3-setuptools
     - pip install -U pip
     - pip install six h5py numpy scipy matplotlib seaborn pandas atari_py Pillow PyOpenGL glances mem_top pytest-cov codacy-coverage
   override:
