--- a/circle.yml
+++ b/circle.yml
@@ -12,8 +12,8 @@ dependencies:
     - pip install tensorflow
     - pip install theano
     - pip install keras
-    - pip install -U 'gym[all]'
-    - git clone https://github.com/pybox2d/pybox2d && cd pybox2d/ && sudo python3 setup.py clean && sudo python3 setup.py build && sudo python3 setup.py install && cd ..
+    # - pip install 'gym[all]'
+    - git clone https://github.com/openai/gym.git && cd gym && pip install -e .[all]
 test:
   override:
     - xvfb-run -a -s "-screen 0 1400x900x24" -- python setup.py test
